Update Linux vs MacOS detect in Makefile

--- a/facs/Makefile
+++ b/facs/Makefile
@@ -2,14 +2,38 @@
 CFLAGS=-O3 -Wall -g -DNODEBUG
 
 # Detect OS
-UNAME := $(shell uname)
-ifneq ($(UNAME), Darwin)
-CFLAGS+=-fopenmp -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE
-LIBS=-lm -lz
-else
-CFLAGS+=-Wno-unknown-pragmas -Wno-unused-value -arch x86_64
-LIBS=-lz
+# UNAME := $(shell uname -s)
+# ifneq ($(UNAME), Darwin) # IF Linux
+# 	CFLAGS+=-fopenmp -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE
+# 	LIBS=-lm -lz
+# else
+# 	CFLAGS+=-Wno-unknown-pragmas -Wno-unused-value -arch x86_64
+# 	LIBS=-lz
+# endif
+
+# Detect OS
+UNAME := $(shell uname -s)
+ifeq ($(UNAME),Linux)
+	CFLAGS +=-fopenmp -static -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE -m64
+	LIBS=-lm -lz
 endif
+ifeq ($(UNAME),Darwin)
+	CFLAGS +=-fopenmp -Wno-unknown-pragmas -Wno-unused-value
+	LIBS=-lz
+endif
+
+#  CPU architecture:
+UNAME_P := $(shell uname -m)
+ifeq ($(UNAME_P),x86_64)
+	CFLAGS += -arch x86_64
+endif
+ifneq ($(filter arm%,$(UNAME_P)),)
+	CFLAGS += -arch arm64
+endif
+
+echo_flag:
+	@echo ${UNAME}
+	@echo ${CFLAGS}
 
 .PHONY: tests clean valgrind
 .SUFFIXES:.c .o
@@ -28,7 +52,7 @@ valgrind: python
 mpi:
 	@echo Make sure you have MPI support on your cluster hint: module load openmpi
 	#mpicc -c *.c ${CFLAGS} ${LIBS}
-	#mpicc -c mpi_decon.c -O3 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE 
+	#mpicc -c mpi_decon.c -O3 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE
 	#mpicc -o mpi_decon mpi_decon.o bloom.o suggestions.o lookup3.o  -lm ${CFLAGS}
 	mpicc -c mpi_bloom.c ${CFLAGS}
 	mpicc -o facs_mpi tool.o query.o remove.o mpi_bloom.o bloom.o suggestions.o lookup8.o file_dir.o prob.o ${LIBS} ${CFLAGS}
@@ -41,15 +65,14 @@ clean:
 
 
 .c.o:
-		$(CC) -c $(DFLAGS) $(INCLUDES) $< -o $@ $(CFLAGS) 
+		$(CC) -c $(DFLAGS) $(INCLUDES) $< -o $@ $(CFLAGS)
 
 ${PROG}:lib${PROG}.a $(AOBJS)
 
 ${PROG}:lib${PROG}.a $(AOBJS) main.o
-		$(CC) $(DFLAGS) $(AOBJS) main.o -o $@ -L. -l${PROG} $(LIBS) $(CFLAGS) 
+		$(CC) $(DFLAGS) $(AOBJS) main.o -o $@ -L. -l${PROG} $(LIBS) $(CFLAGS)
 
 lib${PROG}.a:$(LOBJS)
 		$(AR) -csru $@ $(LOBJS)
 
 main.o: query.h bloom.h build.h file_dir.h hashes.h tool.h remove.h info.h
-
