--- a/Docker/Dockerfile.facs-bloom
+++ b/Docker/Dockerfile.facs-bloom
@@ -1,10 +1,12 @@
 #############
 # Dockerfile to build container image for Facs BLOOM filtering tool
-# See Docs and Source code at: https://github.com/SciLifeLab/facs
+# See Original Docs and Source code at: https://github.com/SciLifeLab/facs
+# A recent fork with modifications is at: https://github.com/maol-corteva/facs
+# We will be using this new FORK for building the container image but the executable will still be called "facs"
 #
-# Build docker image:  docker build -t facs  -f ./Dockerfile.facs-bloom .
+# Build docker image:  docker build -t corteva-facs  -f ./Dockerfile.facs-bloom .
 #
-# Run docker container: docker run -it --rm -v ${PWD}:${PWD} --entrypoint /bin/bash  facs:latest
+# Run docker container: docker run -it --rm -v ${PWD}:${PWD} --entrypoint /bin/bash  corteva-facs:latest
 #
 # use facs like:
 #  * build BLOOM filter db:  "facs build -r Cotton.contaminants.fa"
@@ -12,6 +14,8 @@
 #      this produces an easy to read report in table format (after parsing the json format)
 #############
 
+
+###################################
 # See https://hub.docker.com/_/gcc/ for other versions of GCC container
 # FROM gcc:10.4.0 as builder-stage
 # FROM public.ecr.aws/docker/library/gcc:15-trixie as builder-stage # (TOO NEW)
@@ -22,16 +26,11 @@ LABEL description="FACS BLOOM tool for filtering NGS read files against a BLOOM 
 LABEL org.opencontainers.image.authors="mauricio.larota@corteva.com"
 
 
-# The building of the c++ code may be done outside of this image as part of gitlab's CI/CD...(See other examples in my gitlab page)
-# If that's the case, just copy the newly built tools from the ./bin dir to absolute path /bin of image
-# COPY ./bin/facs /bin/facs
+# The source code for "forked" FACS bloom filter at : git clone https://github.com/maol-corteva/facs
 
-# Else, the source code for FACS bloom filter at : git clone https://github.com/SciLifeLab/facs
-##
-# OR Download source code from "https://github.com/SciLifeLab/facs/archive/refs/heads/master.zip && unzip master.zip"
+# Download source code from https://github.com/maol-corteva/facs/archive/refs/heads/master.zip  && unzip master.zip
 # build FACS
 WORKDIR /build-dir
-# RUN cd /build-dir && wget https://github.com/SciLifeLab/facs/archive/refs/heads/master.zip  \
 RUN cd /build-dir && wget https://github.com/maol-corteva/facs/archive/refs/heads/master.zip  \
     && unzip master.zip \
     && cd facs-master/facs \
@@ -48,21 +47,23 @@ RUN cd /build-dir && wget https://github.com/lh3/seqtk/archive/refs/tags/v1.3.zi
     && chmod -fv a+x /bin/seqtk \
     && cd / && rm -r /build-dir
 
-FROM ubuntu:20.04 AS facs-bloom
+
+
+###################################
+FROM --platform=${PLATFORM} public.ecr.aws/lts/ubuntu:22.04 AS facs-bloom
 ARG DEBIAN_FRONTEND="noninteractive"
 ARG TZ="UTC"
 ENV TZ="${TZ}"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 USER root
-
-# RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 871920D1991BC93C
-
+# Install runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gzip \
     ca-certificates \
     # get json_reformat tool included in yajl ubuntu apt pck.
     yajl-tools \
+    libgomp1 \
     && apt-get clean && rm -rf /var/lib/apt/lists/* && update-ca-certificates
 
 # Set run user/group as uid 2000 gid 3000 for use in KubeFarm
@@ -84,9 +85,12 @@ WORKDIR /app
 # Get app from previous build stage (include required openmp lib)
 COPY --from=builder-stage --chown=${myUID}:${myGID} /bin/facs /app/
 COPY --from=builder-stage --chown=${myUID}:${myGID} /bin/seqtk /app/
+# After system install... replace with original libgomp to avoid issues
+RUN rm -f /lib/x86_64-linux-gnu/libgomp.so.1 
 COPY --from=builder-stage /usr/local/lib64/libgomp.so.1.0.0  /lib/x86_64-linux-gnu/libgomp.so.1
-# copy a demo bloom DB (maize B73 biased) from host filesystem
-COPY facs_bloom_filters/Zm.contaminants.rRNA.C.M.ITS1z.bloom  /app/contaminant_bloom_filters/Zm.contaminants.rRNA.C.M.ITS1z.bloom
+
+# copy a demo bloom DB from host filesystem
+COPY facs_bloom_filters/*  /app/contaminant_bloom_filters/
 
 # USER appuser:appgroup
 USER ${myUID}:${myGID}
